--- a/src/assets/scss/partials/_variables.scss
+++ b/src/assets/scss/partials/_variables.scss
@@ -13,4 +13,4 @@ $black-light: #1e1f1e;
 $greywhite: #d6d6d6;
 
 //NEWTHEME
-$grey: #757575;
+$grey1: #868686;
